# Interactive-Sentiment-Analysis

./: .gitignore  .pre-commit-config.yaml  Main.py  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
styles/: main.css
tests/: __init__.py  test_analytics.py  test_plots.py
utils/: __init__.py  analytics.py  plots.py  text.py
